cpp_sdk/examples/sdk_test_cpp/src/errorcompile.txt
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
../../../sdk/include\spacetimedb/macros.h:130:32: warning: '/*' within block comment [-Wcomment]
  130 | namespace SpacetimeDb::bsatn { /* Functions in SpacetimeDb::bsatn namespace */ \
      |                                ^
../../../sdk/include\spacetimedb/macros.h:136:67: error: unknown type name '_actual_cpp_type_name_'
  136 | inline void serialize(::SpacetimeDb::bsatn::Writer& writer, const _actual_cpp_type_name_& value) {
      |                                                                   ^
../../../sdk/include\spacetimedb/macros.h:141:8: error: unknown type name '_actual_cpp_type_name_'
  141 | inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |        ^
../../../sdk/include\spacetimedb/macros.h:141:43: error: use of undeclared identifier '_actual_cpp_type_name_'
  141 | inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                           ^~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:145:7: error: extraneous closing brace ('}')
  145 |     } \
      |       ^
../../../sdk/include\spacetimedb/macros.h:146:3: error: unknown type name 'END_COMMENT_BLOCK_ENUM'
  146 | } \
      |   ^
../../../sdk/include\spacetimedb/macros.h:147:25: error: expected unqualified-id
  147 | END_COMMENT_BLOCK_ENUM* /
      |                         ^
../../../sdk/include\spacetimedb/macros.h:293:32: warning: '/*' within block comment [-Wcomment]
  293 | namespace SpacetimeDb::bsatn { /* Functions in SpacetimeDb::bsatn namespace */ \
      |                                ^
../../../sdk/include\spacetimedb/macros.h:299:79: error: unknown type name '_actual_cpp_type_name_'
  299 |             inline void serialize(::SpacetimeDb::bsatn::Writer& writer, const _actual_cpp_type_name_& value) {
      |                                                                               ^
../../../sdk/include\spacetimedb/macros.h:301:30: error: use of undeclared identifier 'SPACETIMEDB_XX_SERIALIZE_FIELD'
  301 |                 FIELDS_MACRO(SPACETIMEDB_XX_SERIALIZE_FIELD, writer, value); \
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:304:24: error: unknown type name '_actual_cpp_type_name_'
  304 |                 inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |                        ^
../../../sdk/include\spacetimedb/macros.h:304:59: error: use of undeclared identifier '_actual_cpp_type_name_'
  304 |                 inline _actual_cpp_type_name_ deserialize<_actual_cpp_type_name_>(::SpacetimeDb::bsatn::Reader& reader) {
      |                                                           ^~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:309:15: error: extraneous closing brace ('}')
  309 |             } \
      |               ^
../../../sdk/include\spacetimedb/macros.h:310:3: error: unknown type name 'END_COMMENT_BLOCK_STRUCT'
  310 | } \
      |   ^
../../../sdk/include\spacetimedb/macros.h:311:27: error: expected unqualified-id
  311 | END_COMMENT_BLOCK_STRUCT* /
      |                           ^
sdk_test.cpp:86:61: error: no member named 'sdk' in namespace 'sdk_test_cpp::SpacetimeDb'; did you mean '::SpacetimeDb::sdk'?
   86 |             this->value = ::SpacetimeDb::bsatn::deserialize<SpacetimeDb::sdk::Identity>(reader);
      |                                                             ^~~~~~~~~~~~~~~~
      |                                                             ::SpacetimeDb::sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:21:15: note: '::SpacetimeDb::sdk' declared here
   21 |     namespace sdk {
      |               ^
sdk_test.cpp:89:61: error: no member named 'sdk' in namespace 'sdk_test_cpp::SpacetimeDb'; did you mean '::SpacetimeDb::sdk'?
   89 |             this->value = ::SpacetimeDb::bsatn::deserialize<SpacetimeDb::sdk::ConnectionId>(reader);
      |                                                             ^~~~~~~~~~~~~~~~
      |                                                             ::SpacetimeDb::sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:21:15: note: '::SpacetimeDb::sdk' declared here
   21 |     namespace sdk {
      |               ^
sdk_test.cpp:92:61: error: no member named 'sdk' in namespace 'sdk_test_cpp::SpacetimeDb'; did you mean '::SpacetimeDb::sdk'?
   92 |             this->value = ::SpacetimeDb::bsatn::deserialize<SpacetimeDb::sdk::Timestamp>(reader);
      |                                                             ^~~~~~~~~~~~~~~~
      |                                                             ::SpacetimeDb::sdk
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:21:15: note: '::SpacetimeDb::sdk' declared here
   21 |     namespace sdk {
      |               ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:6:
../../../sdk/include\spacetimedb/bsatn/writer.h:119:27: error: static assertion failed due to requirement '!std::is_class_v<SpacetimeDb::sdk::Identity>': No generic bsatn::serialize for arbitrary classes/pointers. Provide a specific overload or specialization for T, or ensure it's an enum.
  119 |             static_assert(!std::is_class_v<T> && !std::is_pointer_v<T>,
      |                           ^~~~~~~~~~~~~~~~~~~
sdk_test.cpp:20:35: note: in instantiation of function template specialization 'SpacetimeDb::bsatn::serialize<SpacetimeDb::sdk::Identity>' requested here
   20 |             ::SpacetimeDb::bsatn::serialize(writer, arg);
      |                                   ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:6:
../../../sdk/include\spacetimedb/bsatn/writer.h:119:27: error: static assertion failed due to requirement '!std::is_class_v<SpacetimeDb::sdk::ConnectionId>': No generic bsatn::serialize for arbitrary classes/pointers. Provide a specific overload or specialization for T, or ensure it's an enum.
  119 |             static_assert(!std::is_class_v<T> && !std::is_pointer_v<T>,
      |                           ^~~~~~~~~~~~~~~~~~~
sdk_test.cpp:20:35: note: in instantiation of function template specialization 'SpacetimeDb::bsatn::serialize<SpacetimeDb::sdk::ConnectionId>' requested here
   20 |             ::SpacetimeDb::bsatn::serialize(writer, arg);
      |                                   ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:6:
../../../sdk/include\spacetimedb/bsatn/writer.h:119:27: error: static assertion failed due to requirement '!std::is_class_v<SpacetimeDb::sdk::Timestamp>': No generic bsatn::serialize for arbitrary classes/pointers. Provide a specific overload or specialization for T, or ensure it's an enum.
  119 |             static_assert(!std::is_class_v<T> && !std::is_pointer_v<T>,
      |                           ^~~~~~~~~~~~~~~~~~~
sdk_test.cpp:20:35: note: in instantiation of function template specialization 'SpacetimeDb::bsatn::serialize<SpacetimeDb::sdk::Timestamp>' requested here
   20 |             ::SpacetimeDb::bsatn::serialize(writer, arg);
      |                                   ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:5:
In file included from ../../../sdk/include\spacetimedb/macros.h:6:
../../../sdk/include\spacetimedb/bsatn/writer.h:119:27: error: static assertion failed due to requirement '!std::is_class_v<std::string>': No generic bsatn::serialize for arbitrary classes/pointers. Provide a specific overload or specialization for T, or ensure it's an enum.
  119 |             static_assert(!std::is_class_v<T> && !std::is_pointer_v<T>,
      |                           ^~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/bsatn/writer.h:57:37: note: in instantiation of function template specialization 'SpacetimeDb::bsatn::serialize<std::string>' requested here
   57 |                 SpacetimeDb::bsatn::serialize(*this, item); // Use the generic free serialize
      |                                     ^
../../../sdk/include\spacetimedb/bsatn/writer.h:159:11: note: in instantiation of function template specialization 'SpacetimeDb::bsatn::Writer::write_vector<std::string>' requested here
  159 |         w.write_vector(vec); // Calls the member function
      |           ^
sdk_test.cpp:20:35: note: in instantiation of function template specialization 'SpacetimeDb::bsatn::serialize<std::string>' requested here
   20 |             ::SpacetimeDb::bsatn::serialize(writer, arg);
      |                                   ^
2 warnings and 20 errors generated.
emcc: error: ''C:/Users/ludvi/emsdk/upstream/bin\clang.exe' -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr '--sysroot=C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot' -DEMSCRIPTEN -Xclang '-iwithsysroot/include\fakesdl' -Xclang '-iwithsysroot/include\compat' -std=c++20 -I../../../sdk/include -ferror-limit=500 -c sdk_test.cpp -o 'C:\Users\ludvi\AppData\Local\Temp\emscripten_temp_d3ds3r0h\sdk_test_0.o'' failed (returned 1)
